--- a/templates/sales_analysis.html
+++ b/templates/sales_analysis.html
@@ -297,7 +297,7 @@
                             <script>
                                 function redirectToLoginPage() {
                                     // Redirect to the login page
-                                    window.location.href = '/accounts/login/';
+                                    window.location.href = '/logout/';
                                 }
                             </script> 
                         </div>
