--- a/templates/support_analysis.html
+++ b/templates/support_analysis.html
@@ -290,7 +290,7 @@
                             <button class="btn btn-danger" id="logoutBtn" onclick="redirectToLoginPage()"> Log Out </button>
                             <script>
                                 function redirectToLoginPage() {
-                                    window.location.href = '/accounts/login/';
+                                    window.location.href = '/logout/';
                                 }
                             </script>
                         </div>
